[package]
name = "b-engine"
version = "1.3.0"
edition = "2024"

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy = { version = "0.18.0", features = ["dynamic_linking"] }
bevy_pipelines_ready = "0.8.0"
avian3d = "0.5.0"
bevy_quinnet = "0.20.0"
bevy_lunex = "0.6.0"
rand = "0.9.2"

[[test]]
name = "simple"
path = "tests/simple.rs"
harness = false

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false

#
#[profile.release]
#codegen-units = 1
#lto = "thin"

